# hints2

./: .gitattributes  .gitignore  Cargo.toml  Makefile  prd.json
.beads/: metadata.json
.omc/: project-memory.json
.omc/sessions/: 033d7306-a325-4d97-9209-ea50441c9575.json  75bc246c-d6e8-4e57-8a5c-09fb3dddee89.json  8808d570-1b6e-4b25-a603-6f3fe64a869f.json  92561453-0227-498e-8e82-dfa2413a0c60.json  ab405982-d09a-463c-b4f9-79fb8c6923d9.json  d7e6d583-8b83-4449-a303-e88c44531fdf.json
.omc/state/: agent-replay-2ca6a0fe-977d-4e30-a4ab-ce8fd8d4c9fa.jsonl  hud-state.json  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-11T18-17-59-461Z.json
.omc/state/sessions/033d7306-a325-4d97-9209-ea50441c9575/: hud-state.json
.omc/state/sessions/3577f1b8-5ceb-4a37-93b8-5492ddcf83e8/: hud-state.json
.omc/state/sessions/8808d570-1b6e-4b25-a603-6f3fe64a869f/: hud-state.json
.omc/state/sessions/d7e6d583-8b83-4449-a303-e88c44531fdf/: hud-state.json
backends/: Cargo.toml
backends/src/: lib.rs
hints/: Cargo.toml  constants.py  hints.py  mouse_service.py  run
hints/backends/: atspi.py  opencv.py
hints/huds/: overlay.py
hints/src/: interceptor.rs  lib.rs  main.rs  overlay.rs  setup.rs
hints/window_systems/: gnome.py  hyprland.py  plasmashell.py  sway.py  x11.py
models/: .gitignore  download_and_export.sh  icon_detect.onnx  icon_detect_320.onnx  icon_detect_480.onnx  icon_detect_640.onnx  icon_detect_640_int8.onnx  icon_detect_int8.onnx  yolo11n_640.onnx  yolov10n_640.onnx  yolov8n_640.onnx
mouse_service/: Cargo.toml
mouse_service/src/: main.rs
src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
window_systems/: Cargo.toml
window_systems/src/: lib.rs
