[workspace]
resolver = "2"
members = [
    "hints",
    "window_systems",
    "backends",
    "utils",
    "mouse_service",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
itertools = "0.13"
