[package]
name = "backends"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
zbus = { version = "4", default-features = false, features = ["tokio"] }
atspi = "0.19"
image = "0.25"
screenshots = "0.8"
utils = { path = "../utils" }
window_systems = { path = "../window_systems" }

[lib]
path = "src/lib.rs"
