[package]
name = "mouse_service"
version = "0.1.0"
edition = "2021"

[dependencies]
hints = { path = "../hints" }
backends = { path = "../backends" }
utils = { path = "../utils" }
evdev = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
glib = "0.18"
gdk = "0.18"
gtk = "0.18"

[[bin]]
name = "hintsd"
path = "src/main.rs"
